--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 description = "Library for reading Enpass password vaults"
 
 [dependencies]
-rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
+rusqlite = { version = "0.32", features = ["sqlcipher"] }
 pbkdf2 = "0.12"
 sha1 = "0.10"
 sha2 = "0.10"
